# otus

./: .gitignore
lesson_10/: Dockerfile  README.md  pyproject.toml
lesson_10/lesson_10/: main.py
